Explicit op factory implementations
Reviewed-by: mcimadamore